* Fixed mapping description of GOME2 L1 product ingestion.

1.1 2017-11-06
~~~~~~~~~~~~~~

* Parameters that required a file or a directory as dataset reference can now
  also take a file with a .pth extension as input. This file should contain a
  line-separated list of paths to files and/or directories of the dataset.

* Specifying a directory for a dataset will now recursively add all products
  (including sub-directories and contents of .pth files).

* The variable that is binned on with a 'bin(variable)' operation is now
  always kept in the resulting product.

* The bin() operation can now handle 'count' variables (summing it if present
  and creating it otherwise).

* Fixed issue where collocate filter operation on a product with a single
  sample could end in an infinite loop.

* Fixed issue in harpcollocate when providing a -nx option without a -ny.

* Fixed issue with wrap() operation for values < specified minimum.

* Fixed issue with collocate_left/collocate_right operations not including
  last sample when applying it on products in an external format.

* harpcollocate now ignores empty products instead of raising errors for them.

* Added -oa/-ob and -aa/-ab options to harpcollocate matchup.

* Added solar_declination_angle and solar_hour_angle variables and derivations.

* Added orbit_index variable and added this to various product ingestions.

* Fixed derivations of solar azimuth/zenith angles from datetime and lat/lon.

* Added derivations for averaging kernel conversions.

* Added derivations for tropopause altitude/pressure.

* Added NH3 (amonia) as supported species.

* Updates to ECMWF-GRIB, GEOMS-TE-UVVIS-DOAS-OFFAXIS, GEOMS-TE-FTIR, and
  S5P L2 product ingestions (and several others for the new orbit_index).

1.0 2017-09-25
~~~~~~~~~~~~~~

* The import and ingest functions have been combined into a single import
  function that can both read HARP compliant products as well as ingest from
  the supported external formats. This means: