@@ -1,3 +1,6 @@
+* Fixed issue where harpmerge did not introduce a time dimension for all
+  variables.
+
 * Fixed mapping description of GOME2 L1 product ingestion.
 
 1.1 2017-11-06
